RESOLVED FIXED57279
WebKit2 bundle page needs to offer generated file hooks
https://bugs.webkit.org/show_bug.cgi?id=57279
Summary WebKit2 bundle page needs to offer generated file hooks
Darin Adler
Reported 2011-03-28 15:30:07 PDT
WebKit2 page bundle needs to offer generated file hooks
Attachments
Patch (5.96 KB, patch)
2011-03-28 15:35 PDT, Darin Adler
no flags
Patch (7.14 KB, patch)
2011-03-28 18:05 PDT, Darin Adler
aroben: review+
Darin Adler
Comment 1 2011-03-28 15:35:40 PDT
Early Warning System Bot
Comment 2 2011-03-28 15:48:33 PDT
Darin Adler
Comment 3 2011-03-28 18:04:49 PDT
Comment on attachment 87221 [details] Patch Forgot to include the WebKitTestRunner part of the patch. Uploading a copy with that in it soon.
Darin Adler
Comment 4 2011-03-28 18:05:16 PDT
Adam Roben (:aroben)
Comment 5 2011-03-29 05:59:34 PDT
Comment on attachment 87245 [details] Patch Presumably the two MiniBrowser implementations need to be updated as well.
Darin Adler
Comment 6 2011-03-29 09:25:15 PDT
(In reply to comment #5) > Presumably the two MiniBrowser implementations need to be updated as well. I’ll check. But maybe not if they don’t have a UI client at all. I searched for the name of the struct I changed in the entire tree and did not get any hits on MiniBrowser.
Darin Adler
Comment 7 2011-03-29 11:20:41 PDT
Csaba Osztrogonác
Comment 8 2011-03-29 12:08:19 PDT
(In reply to comment #7) > Committed r82289: <http://trac.webkit.org/changeset/82289> It broke WTR build because of missing initializers for members: /home/oszi/WebKit/Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp: In constructor ‘WTR::InjectedBundlePage::InjectedBundlePage(const OpaqueWKBundlePage*)’: /home/oszi/WebKit/Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:216: error: missing initializer for member ‘WKBundlePageUIClient::shouldGenerateFileForUpload’ /home/oszi/WebKit/Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:216: error: missing initializer for member ‘WKBundlePageUIClient::generateFileForUpload’
Csaba Osztrogonác
Comment 9 2011-03-29 12:44:08 PDT
I landed the missing part of the patch: http://trac.webkit.org/changeset/82302
Darin Adler
Comment 10 2011-03-29 13:52:50 PDT
Sorry about not landing that part! I am not sure why webkit-patch didn’t land it. Last time I had this problem, someone told me it was due to Maciej’s changes to work only within a certain directory, and I can’t prove that didn’t happen this time, but I don’t think it did.
Note You need to log in before you can comment on or make changes to this bug.