2011-03-28  Darin Adler  <darin@apple.com>

Reviewed by Adam Roben.

        WebKit2 bundle page needs to offer generated file hooks
        https://bugs.webkit.org/show_bug.cgi?id=57279

        * WebProcess/InjectedBundle/API/c/WKBundlePage.h: Added shouldGenerateFileForUpload and
        generateFileForUpload callback pointers.

        * WebProcess/InjectedBundle/InjectedBundlePageUIClient.cpp:
        (WebKit::InjectedBundlePageUIClient::shouldGenerateFileForUpload): Added.
        (WebKit::InjectedBundlePageUIClient::generateFileForUpload): Added.
        * WebProcess/InjectedBundle/InjectedBundlePageUIClient.h: Added functions above.

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::shouldReplaceWithGeneratedFileForUpload): Implemented by
        calling the functions above.
        (WebKit::WebChromeClient::generateReplacementFile): Ditto.


Canonical link: https://commits.webkit.org/72091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82289 268f45cc-cd09-0410-ab3c-d52691b4dbfc